[gd_scene load_steps=9 format=3 uid="uid://cnqbkix8v1o2p"]

[ext_resource type="Script" uid="uid://d1kf2dsu7m130" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="FontFile" uid="uid://d0knp3x3wf5a5" path="res://assets/WinkySans-VariableFont_wght.ttf" id="1_n87rw"]
[ext_resource type="Texture2D" uid="uid://q8hmgqwih7y8" path="res://assets/play.png" id="3_7l7mv"]
[ext_resource type="Texture2D" uid="uid://bptv4msw0vma3" path="res://assets/reload.png" id="4_v4r4p"]
[ext_resource type="Texture2D" uid="uid://olw6t1rpfjnf" path="res://assets/quit.png" id="5_1s2dm"]
[ext_resource type="Texture2D" uid="uid://bkkrm274m4s7h" path="res://assets/pause.png" id="6_v4r4p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88e76"]
bg_color = Color(0, 0, 0, 0.176471)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knqa7"]
bg_color = Color(0, 0, 0, 0.176471)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="Panel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.231373)
metadata/_edit_lock_ = true

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 243.0
offset_top = 108.0
offset_right = -243.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -69.0
offset_right = 148.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResumeButton" type="Button" parent="Panel2/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_88e76")
icon_alignment = 1
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="Panel2/MarginContainer/VBoxContainer/ResumeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -30.5
offset_right = 31.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_7l7mv")
expand_mode = 1

[node name="RetryButton" type="Button" parent="Panel2/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_88e76")
icon_alignment = 1
expand_icon = true

[node name="TextureRect2" type="TextureRect" parent="Panel2/MarginContainer/VBoxContainer/RetryButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -30.5
offset_right = 31.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_v4r4p")
expand_mode = 1

[node name="QuitButton" type="Button" parent="Panel2/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_knqa7")
icon_alignment = 1
expand_icon = true

[node name="TextureRect3" type="TextureRect" parent="Panel2/MarginContainer/VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -31.0
offset_right = 31.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_1s2dm")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_top = 23.0
offset_right = 49.0
offset_bottom = 121.0
grow_horizontal = 2
texture = ExtResource("6_v4r4p")
expand_mode = 1

[connection signal="pressed" from="Panel2/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel2/MarginContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel2/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
